Edited Jenkins File

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,58 @@
-pipeline {
-    agent any
-
-    stages {
-        stage('Build') {
-            steps {
-               echo "build completed successfully"
-            }
-        }
-        stage('Test') {
-            steps {
-               echo "test completed successfully"
-            }
-        }
-        stage('Package') {
-            steps {
-               echo "package completed successfully"
-            }
-        }
-  
-    }
+pipeline { 
+agent any
+environment {
+LABS = credentials('labcreds')
+JAVA_HOME = '/opt/bitnami/java' // Set your JAVA_HOME path here.
+PATH = "${env.JAVA_HOME}/bin:${env.PATH}" // Add Java binaries to PATH
 }
+stages {
+stage('Setup Virtual Environment') {
+steps { 
+script {
+// Create a virtual environment with the project name (Retail pipeline) 
+sh 'python3 -m venv retail_pipeline_venv'
+// Upgrade pip and install pipenv in the virtual environment
+sh './retail_pipeline_venv/bin/pip install --upgrade pip'
+sh './retail_pipeline_venv/bin/pip install pipenv'
+}
+}
+}
+stage('Install Dependencies') {
+steps { 
+script {
+// Install your project dependencies (e.g., requirements.txt or Pipfile) 
+sh './retail_pipeline_venv/bin/pipenv install'
+}
+}
+}
+stage('Test') {
+steps { 
+script {
+// Ensure JAVA_HOME is set for PySpark to work 
+sh 'echo $JAVA_HOME'
+sh 'echo $PATH'
+// Run tests (assuming you are using pytest for tests) 
+sh './retail_pipeline_venv/bin/pipenv run pytest'
+}
+}
+}
+stage('Package') {
+steps {
+// Create the zip file but exclude the venv directory
+sh 'zip -r retailproject.zip . -x "retail_pipeline_venv/*"'
+
+
+}
+
+}
+stage('Deploy') {
+steps {
+// Add deployment steps here (e.g., deploy to a server or cloud)
+sh 'sshpass -p $LABS_PSW scp -o StrictHostKeyChecking=no -r 
+retailproject.zip $LABS_USR@g02.itversity.com:/home/itv012419/retailproject'
+}
+}
+}
+}
+
+
