--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,58 @@
 pipeline {
     agent any
 
+    environment {
+        LABS = credentials('labcreds')
+        JAVA_HOME = '/opt/bitnami/java'
+        PATH = "${env.JAVA_HOME}/bin:${env.PATH}"
+    }
+
     stages {
-        stage('Build') {
+        stage('Setup Virtual Environment') {
             steps {
-               echo "build completed successfully"
+                script {
+                    // Create a virtual environment with the project name
+                    sh 'python3 -m venv retail_pipeline_venv'
+                    // Upgrade pip and install pipenv in the virtual environment
+                    sh './retail_pipeline_venv/bin/pip install --upgrade pip'
+                    sh './retail_pipeline_venv/bin/pip install pipenv'
+                }
             }
         }
+
+        stage('Install Dependencies') {
+            steps {
+                script {
+                    // Install project dependencies using Pipfile
+                    sh './retail_pipeline_venv/bin/pipenv install'
+                }
+            }
+        }
+
         stage('Test') {
             steps {
-               echo "test completed successfully"
+                script {
+                    // Ensure JAVA_HOME and PATH are set
+                    sh 'echo $JAVA_HOME'
+                    sh 'echo $PATH'
+                    // Run tests
+                    sh './retail_pipeline_venv/bin/pipenv run pytest'
+                }
             }
         }
+
         stage('Package') {
             steps {
-               echo "package completed successfully"
+                // Create the zip file but exclude the venv directory
+                sh 'zip -r retailproject.zip . -x "retail_pipeline_venv/*"'
             }
         }
-  
+
+        stage('Deploy') {
+            steps {
+                // Add deployment steps here
+                sh 'sshpass -p $LABS_PSW scp -o StrictHostKeyChecking=no -r retailproject.zip $LABS_USR@g02.itversity.com:/home/itv016272/retailproject'
+            }
+        }
     }
 }
